--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,4 +1,11 @@
-
+<% if book.errors.any? %>
+  <%= book.errors.count %>件のエラーが発生しました
+  <ul>
+    <% book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <%= form_with model:book,local:true do |f| %>
   <div class="form-group">
@@ -10,7 +17,7 @@
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
   <div class="form-group">
-    <%= f.submit class: 'btn btn-success' %>
+    <%= f.submit 'Create Book', class: 'btn btn-success' %>
   </div>
 <% end %>
 
