--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,5 +1,5 @@
 <% if book.errors.any? %>
-  <%= book.errors.count %>件のエラーが発生しました
+  <%= book.errors.count %>prohibited this obj from being saved:
   <ul>
     <% book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
@@ -7,7 +7,7 @@
   </ul>
 <% end %>
 
-<%= form_with model:book,local:true do |f| %>
+<%= form_with model: book,local: true do |f| %>
   <div class="form-group">
     <%= f.label :title %>
     <%= f.text_field :title, class: 'form-control book_title' %>
