--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,5 +1,5 @@
 <% if book.errors.any? %>
-  <%= book.errors.count %>prohibited this obj from being saved:
+  <%= book.errors.count %>error prohibited this obj from being saved:
   <ul>
     <% book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
