--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,17 +4,17 @@
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
   		<h1>Editing Book</h1>
-  		
+
   		<% if @book.errors.any? %>
-        <%= @book.errors.count %>prohibited this obj from being saved:
+        <%= @book.errors.count %>error prohibited this obj from being saved:
         <ul>
           <% @book.errors.full_messages.each do |message| %>
             <li><%= message %></li>
           <% end %>
         </ul>
       <% end %>
-  		
-  		
+
+
   		<%= form_with model: @book,local: true do |f| %>
         <div class="form-group">
           <%= f.label :title %>
@@ -28,7 +28,7 @@
           <%= f.submit 'Update Book', class: 'btn btn-success' %>
         </div>
       <% end %>
-  		
+
   		<%= link_to 'Show', @book %> |
   		<%= link_to 'Back', books_path, class: "back" %>
   	</div>
