--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,6 +17,22 @@
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
       </tr>
+
+      <tr>
+        <% if book.favorited_by?(current_user) %>
+          <td>
+            <%= link_to book_favorites_path(book.id), method: :delete do %>
+              ♥<%= book.favorites.count %> いいね
+            <% end %>
+          </td>
+          <% else %>
+          <td>
+            <%= link_to book_favorites_path(book.id), method: :post do %>
+              ♡<%= book.favorites.count %> いいね
+            <% end %>
+          </td>
+        <% end %>
+      </tr>
     <% end %>
   </tbody>
 </table>
