--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,19 +16,17 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
-      </tr>
 
-      <tr>
         <% if book.favorited_by?(current_user) %>
           <td>
             <%= link_to book_favorites_path(book.id), method: :delete do %>
-              ♥<%= book.favorites.count %> いいね
+              ♥<%= book.favorites.count %>
             <% end %>
           </td>
           <% else %>
           <td>
             <%= link_to book_favorites_path(book.id), method: :post do %>
-              ♡<%= book.favorites.count %> いいね
+              ♡<%= book.favorites.count %>
             <% end %>
           </td>
         <% end %>
