--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -19,13 +19,13 @@
 
         <% if book.favorited_by?(current_user) %>
           <td>
-            <%= link_to book_favorites_path(book.id), method: :delete do %>
+            <%= link_to book_favorites_path(book.id), method: :delete, class: "btn btn-danger" do %>
               ♥<%= book.favorites.count %>
             <% end %>
           </td>
           <% else %>
           <td>
-            <%= link_to book_favorites_path(book.id), method: :post do %>
+            <%= link_to book_favorites_path(book.id), method: :post, class: "btn btn-primary" do %>
               ♡<%= book.favorites.count %>
             <% end %>
           </td>
