[Check point] bookers2-debug

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,6 +22,14 @@
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
         </tr>
+        
+        <td>
+          <% @book.book_comments.each do |book_comment| %>
+            <%= image_tag book_comment.user.get_profile_image, size:"50x50" %>
+            <%= book_comment.user.name %>
+            <%= book_comment.comment %>
+          <% end %>
+        </td>
         <td>
           <%= form_with model: [@book, @book_comment] do |f| %>
             <%= f.text_area :comment, style: "width:100%", rows: "4" %>
