--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,12 +23,15 @@
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
         </tr>
-        
+
         <td>
           <% @book.book_comments.each do |book_comment| %>
             <%= image_tag book_comment.user.get_profile_image, size:"50x50" %>
             <%= book_comment.user.name %>
             <%= book_comment.comment %>
+            <% if book_comment.user == current_user %>
+              <%= link_to "destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-danger"  %>
+            <% end %>
           <% end %>
         </td>
         <td>
@@ -37,7 +40,7 @@
             <%= f.submit "送信する" %>
           <% end %>
         </td>
-        
+
       </table>
     </div>
   </div>
