--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,20 +17,7 @@
         <td><%= link_to book.title, book %></td>
         <td><%= book.body %></td>
 
-        <% if book.favorited_by?(current_user) %>
-          <td>
-            <%= link_to book_favorites_path(book.id), method: :delete, class: "btn btn-danger" do %>
-              ♥<%= book.favorites.count %>
-            <% end %>
-          </td>
-          <% else %>
-          <td>
-            <%= link_to book_favorites_path(book.id), method: :post, class: "btn btn-primary" do %>
-              ♡<%= book.favorites.count %>
-            <% end %>
-          </td>
-        <% end %>
-        <td><%= "コメント数：#{book.book_comments.count}" %></td>
+        <%= render 'favorites/favorite', books: books, book: book %>
       </tr>
     <% end %>
   </tbody>
