--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,11 +17,11 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <td><%= "コメント数：#{@book.book_comments.count}" %></td>
           <% if @user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
+          <%= render 'favorites/favorite', books: @books, book: @book %>
         </tr>
 
         <td>
