--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,13 +1,16 @@
         <% if book.favorited_by?(current_user) %>
           <td>
-            <%= link_to book_favorites_path(book.id), method: :delete, class: "btn btn-danger" do %>
-              ♥<%= book.favorites.count %>
+            <%= link_to book_favorites_path(book.id), method: :delete do %>
+              <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+              <%= book.favorites.count %>
             <% end %>
           </td>
           <% else %>
           <td>
-            <%= link_to book_favorites_path(book.id), method: :post, class: "btn btn-primary" do %>
-              ♡<%= book.favorites.count %>
+            <%= link_to book_favorites_path(book.id), method: :post do %>
+              <i class="fa fa-heart" aria-hidden="true" style="color: blue;"></i>
+              <%= book.favorites.count %>
             <% end %>
           </td>
         <% end %>
+        <td><%= "コメント数：#{book.book_comments.count}" %></td>
