--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,15 +8,15 @@
     </div>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
-  		<table class='table'>
+  		<table class='table　table-hover table-inverse'>
   		  <tr>
-          <td><%= link_to(@book.user) do %>
-            <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
+          <td class="col-md-4"><%= link_to(@book.user) do %>
+            <%= image_tag @book.user.get_profile_image, size:"50x50" %><br>
             <%= @book.user.name %>
             <% end %>
           </td>
-          <td><%= link_to @book.title, @book %></td>
-          <td><%= @book.body %></td>
+          <td class="col-md-2"><%= link_to @book.title, @book %></td>
+          <td class="col-md-2"><%= @book.body %></td>
           <% if @user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
@@ -26,21 +26,22 @@
 
         <td>
           <% @book.book_comments.each do |book_comment| %>
+            <div class="row">
             <%= image_tag book_comment.user.get_profile_image, size:"50x50" %>
             <%= book_comment.user.name %>
             <%= book_comment.comment %>
             <% if book_comment.user == current_user %>
               <%= link_to "destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-danger"  %>
             <% end %>
+            </div>
           <% end %>
         </td>
         <td>
-          <%= form_with model: [@book, @book_comment] do |f| %>
-            <%= f.text_area :comment, style: "width:100%", rows: "4" %>
-            <%= f.submit "送信する" %>
-          <% end %>
+            <%= form_with model: [@book, @book_comment] do |f| %>
+              <%= f.text_area :comment, style: "width:100%", rows: "4" %>
+              <%= f.submit "送信する" %>
+            <% end %>
         </td>
-
       </table>
     </div>
   </div>
