[Check point] bookers2-debug

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,9 +8,9 @@
     </div>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
-  		<table class='table　table-hover table-inverse'>
+  		<table class='table'>
   		  <tr>
-          <td class="col-md-4"><%= link_to(@book.user) do %>
+          <td class="col-md-2"><%= link_to(@book.user) do %>
             <%= image_tag @book.user.get_profile_image, size:"50x50" %><br>
             <%= @book.user.name %>
             <% end %>
@@ -24,25 +24,27 @@
           <%= render 'favorites/favorite', books: @books, book: @book %>
         </tr>
 
-        <td>
+        <td class="col-md-10">
           <% @book.book_comments.each do |book_comment| %>
             <div class="row">
-            <%= image_tag book_comment.user.get_profile_image, size:"50x50" %>
-            <%= book_comment.user.name %>
-            <%= book_comment.comment %>
-            <% if book_comment.user == current_user %>
-              <%= link_to "destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-danger"  %>
-            <% end %>
+              <div class="col-md-2 m-2"><%= image_tag book_comment.user.get_profile_image, size:"50x50" %></div>
+              <div class="col-md-2"><%= book_comment.user.name %></div>
+              <div class="col-md-2"><%= book_comment.comment %></div>
+              <div class="col-md-2">
+                  <% if book_comment.user == current_user %>
+                  <%= link_to "destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-danger"  %>
+                <% end %>
+              </div>
             </div>
           <% end %>
         </td>
-        <td>
-            <%= form_with model: [@book, @book_comment] do |f| %>
-              <%= f.text_area :comment, style: "width:100%", rows: "4" %>
-              <%= f.submit "送信する" %>
-            <% end %>
-        </td>
       </table>
+      <div>
+        <%= form_with model: [@book, @book_comment] do |f| %>
+          <%= f.text_area :comment, style: "width:100%", rows: "4" %>
+          <%= f.submit "送信する" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
