[Check point] bookers2-debug

--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,8 +16,8 @@
         </td>
         <td><%= link_to book.title, book %></td>
         <td><%= book.body %></td>
-
-        <%= render 'favorites/favorite', books: books, book: book %>
+        <td>コメント数: <%= book.book_comments.count %></td>
+        <td><%= render 'favorites/favorite',book: book %></td>
       </tr>
     <% end %>
   </tbody>
