--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,18 +10,19 @@
   		<h2>Book detail</h2>
   		<table class='table'>
   		  <tr>
-          <td class="col-md-2"><%= link_to(@book.user) do %>
+          <td><%= link_to(@book.user) do %>
             <%= image_tag @book.user.get_profile_image, size:"50x50" %><br>
             <%= @book.user.name %>
             <% end %>
           </td>
-          <td class="col-md-2"><%= link_to @book.title, @book %></td>
-          <td class="col-md-2"><%= @book.body %></td>
-          <% if @user == current_user %>
+          <td><%= link_to @book.title, @book %></td>
+          <td><%= @book.body %></td>
+          <td>コメント数: <%= @book.book_comments.count %></td>
+          <td><%= render "favorites/favorite", book: @book %></td>
+          <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
-          <%= render 'favorites/favorite', books: @books, book: @book %>
         </tr>
 
         <td class="col-md-10">
