--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,35 +17,16 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <td>コメント数: <%= @book.book_comments.count %></td>
           <td><%= render "favorites/favorite", book: @book %></td>
+          <td>コメント数: <%= @book.book_comments.count %></td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
         </tr>
-
-        <td class="col-md-10">
-          <% @book.book_comments.each do |book_comment| %>
-            <div class="row">
-              <div class="col-md-2 m-2"><%= image_tag book_comment.user.get_profile_image, size:"50x50" %></div>
-              <div class="col-md-2"><%= book_comment.user.name %></div>
-              <div class="col-md-2"><%= book_comment.comment %></div>
-              <div class="col-md-2">
-                  <% if book_comment.user == current_user %>
-                  <%= link_to "destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-danger"  %>
-                <% end %>
-              </div>
-            </div>
-          <% end %>
-        </td>
       </table>
-      <div>
-        <%= form_with model: [@book, @book_comment] do |f| %>
-          <%= f.text_area :comment, style: "width:100%", rows: "4" %>
-          <%= f.submit "送信する" %>
-        <% end %>
-      </div>
+      <%= render "book_comments/index", book: @book %>
+      <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
     </div>
   </div>
 </div>
