[Check point] bookers2-debug

--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -9,6 +9,13 @@
 	        <th>introduction</th>
        	  <th><%= user.introduction %></th>
         </tr>
+        <tr>
+          <th>follows</th>
+          
+        </tr>
+        <tr>
+          <th>followers</th>
+        </tr>
       </table>
 
       <div class='row'>
