[Check point] bookers2-debug

--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -21,7 +21,7 @@
           <th>followers</th>
           <th>
             <%= link_to user_followers_path(user.id) do %>
-              <%= user.followings.count %>
+              <%= user.followers.count %>
             <% end %>
           </th>
           </th>
