[Check point] bookers2-debug

--- a/app/views/relationships/followers.html.erb
+++ b/app/views/relationships/followers.html.erb
@@ -1,2 +1,4 @@
 <h1>Follower Users</h1>
-<%= render 'follow_list', users: @users %>
+<div class="col-md-12 offset-md-1">
+  <%= render 'follow_list', users: @users %>
+</div>
