--- a/app/views/relationships/followings.html.erb
+++ b/app/views/relationships/followings.html.erb
@@ -1,2 +1,5 @@
 <h1>Follow Users</h1>
-<%= render 'follow_list', users: @users  %>
+<div class="col-md-12 offset-md-1">
+  <%= render 'follow_list', users: @users %>
+</div>
+
