--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -29,8 +29,12 @@
       </table>
 
       <div class='row'>
-        <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
-          <i class="fas fa-user-cog"></i>
+        <% if user == current_user %>
+          <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
+            <i class="fas fa-user-cog"></i>
+          <% end %>
+        <% else %>
+          <%= render 'relationships/follow_form', user: user %>
         <% end %>
       </div>
 
