[Check point] bookers2-debug

--- a/app/views/relationships/followers.html.erb
+++ b/app/views/relationships/followers.html.erb
@@ -1,4 +1,6 @@
 <h1>Follower Users</h1>
-<div class="col-md-12 offset-md-1">
-  <%= render 'follow_list', users: @users %>
-</div>
+<% if @users.exists? %>
+  <%= render '/users/index', users: @users %>
+<% else %>
+  <p>ユーザーはいません</p>
+<% end %>
