--- a/app/views/relationships/followings.html.erb
+++ b/app/views/relationships/followings.html.erb
@@ -1,5 +1,6 @@
 <h1>Follow Users</h1>
-<div class="col-md-12 offset-md-1">
-  <%= render 'follow_list', users: @users %>
-</div>
-
+<% if @users.exists? %>
+  <%= render '/users/index', users: @users %>
+<% else %>
+  <p>ユーザーはいません</p>
+<% end %>
