--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -14,7 +14,7 @@
         <td>フォロー数: <%= user.followings.count %></td>
         <td>フォロワー数: <%= user.followers.count %></td>
         <td><%= render 'relationships/follow_form', user: user %></td>
-        <td><%= link_to 'Show', user %></td>
+        <td><%= link_to 'Show', user, class: "user_#{user.id}" %></td>
       </tr>
     <% end %>
   </tbody>
