[Finish theme5] bookers2-debug

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
+      <% if user_signed_in? %>
+        <%= render 'searches/search_form' %>
+      <% end %>
       <main>
         <p id="notice">
           <%= flash[:notice] %>
