--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,12 +1,12 @@
         <% if book.favorited_by?(current_user) %>
-          <%= link_to book_favorites_path(book.id), method: :delete do %>
+          <%= link_to book_favorites_path(book.id), method: :delete, remote: true do %>
             <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
             <%= book.favorites.count %>
           <% end %>
         <% else %>
-          <%= link_to book_favorites_path(book.id), method: :post do %>
+          <%= link_to book_favorites_path(book.id), method: :post, remote: true do %>
             <i class="fa fa-heart" aria-hidden="true" style="color: blue;"></i>
             <%= book.favorites.count %>
           <% end %>
         <% end %>
-        
+
