--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,7 +25,7 @@
           <% end %>
         </tr>
       </table>
-      <div id="comments_area"><%= render "book_comments/index", book: @book, book_comment: @book_comment %></div>
+      <div class="book-comments-index"><%= render "book_comments/index", book: @book, book_comment: @book_comment %></div>
       <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
     </div>
   </div>
